<resources>
    <string name="app_name">MiniProjectAndroid</string>
    <string name="avtivity_accueil_title">eCampus</string>
    <string name="avtivity_accueil_mafac">M@ Fac</string>
    <string name="activity_liste_anomalie">Liste Anomalies</string>
    <string name="avtivity_accueil_mescours">Mes Cours</string>
    <string name="avtivity_accueil_configuration">Configuration</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="qrcode_button">Scan QR Code</string>
    <string name="login">Login</string>
    <string name="mot_passe">Mot de passe</string>
    <string name="lien_emplois_temps">Lien emplois du temps</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="mail">Email</string>
    <string name="update">Mise à jour</string>
    <string-array name="criticiter">
        <item>CONFORT</item>
        <item>PROBLEM</item>
        <item>DANGER</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="time_occupation_arrays">
        <item>Jour</item>
        <item>Heure</item>
    </string-array>
</resources>
